fixed dark mode issue

--- a/app/globals.css
+++ b/app/globals.css
@@ -22,7 +22,7 @@
 
 
 
-@media (prefers-color-scheme: dark) {
+
   :root {
     --background:  #ededed;
     --foreground: #0a0a0a;
@@ -30,7 +30,18 @@
     --maroontext: #AB4967;
     --purpletext: #493972;
   }
-}
+
+/* for light mode, we can override the colors with lighter shades
+
+  @media (prefers-color-scheme: light) {
+  :root {
+    --background:  #ededed;
+    --foreground: #0a0a0a;
+    --purplebackground: #6750A4;
+    --maroontext: #AB4967;
+    --purpletext: #493972;
+  }
+} */
 
 .purplebackground {
   color: var(--purplebackground);
